# wavesst

./: .gitignore  MANIFEST.in  README.md  check_env.py  demo_chirps.py  pyproject.toml  setup.py
notebooks/: 00_wavesst_full_demo.ipynb  01_cwt_sst.ipynb  02_stft_stft_sst.ipynb  03_msst.ipynb  04_signal_synthesis.ipynb  05_ridge_reconstruction.ipynb
src/wavesst/: __init__.py  config.py
src/wavesst/_core/: filters.pyx  ridge_dp.pyx
src/wavesst/analysis/: onset.py  parallel.py  reconstruction.py  ridge.py  ridge_fit.py
src/wavesst/backends/: __init__.py  _protocol.py  numpy_backend.py  torch_backend.py
src/wavesst/synthesis/: __init__.py  chirp.py  noise.py
src/wavesst/transforms/: cwt.py  icwt.py  msst.py  sst.py  stft.py  stft_sst.py  wavelets.py
src/wavesst/viz/: __init__.py  interactive.py  tf_plot.py
tests/: conftest.py
tests/unit/: test_backend.py  test_config.py  test_cwt.py  test_cwt_properties.py  test_filters.py  test_icwt.py  test_msst.py  test_onset.py  test_reconstruction.py  test_ridge.py  test_ridge_fit.py  test_ridge_masked.py  test_ridge_parallel.py  test_sst.py  test_sst_properties.py  test_stft.py  test_stft_sst.py  test_synthesis.py  test_synthesis_exports.py  test_torch_backend.py  test_viz.py  test_wavelets.py
tests/validation/: test_cwt_vs_ssqueezepy.py  test_sst_vs_pywt.py  test_sst_vs_ssqueezepy.py
