[build-system]
requires = ["setuptools>=68", "Cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "wavesst"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "torch>=2.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
cuda      = ["cupy-cuda12x"]
viz       = ["vispy>=0.14", "PyOpenGL>=3.1"]
reference = ["ssqueezepy", "PyWavelets"]
dev       = ["pytest>=7.0", "pytest-benchmark", "hypothesis>=6.0", "numba"]
all       = ["wavesst[cuda,viz,reference,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
